crates/engram-core/bindings/swift/engram_coreFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t, int8_t
    );
void*_Nonnull uniffi_engram_core_fn_clone_memorystorehandle(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void uniffi_engram_core_fn_free_memorystorehandle(void*_Nonnull ptr, RustCallStatus *_Nonnull out_status
);
void*_Nonnull uniffi_engram_core_fn_constructor_memorystorehandle_new(RustBuffer db_path, RustBuffer key_bytes, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_engram_core_fn_method_memorystorehandle_find_by_entity(void*_Nonnull ptr, RustBuffer entity, RustCallStatus *_Nonnull out_status
);
void ffi_engram_core_rust_future_poll_i32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_engram_core_rust_future_cancel_i32(uint64_t handle
);
void ffi_engram_core_rust_future_free_i32(uint64_t handle
);
int32_t ffi_engram_core_rust_future_complete_i32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_engram_core_rust_future_poll_u64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_engram_core_rust_future_cancel_u64(uint64_t handle
);
void ffi_engram_core_rust_future_free_u64(uint64_t handle
);
uint64_t ffi_engram_core_rust_future_complete_u64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_engram_core_rust_future_poll_i64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_engram_core_rust_future_cancel_i64(uint64_t handle
);
void ffi_engram_core_rust_future_free_i64(uint64_t handle
);
int64_t ffi_engram_core_rust_future_complete_i64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_engram_core_rust_future_poll_f32(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_engram_core_rust_future_cancel_f32(uint64_t handle
);
void ffi_engram_core_rust_future_free_f32(uint64_t handle
);
float ffi_engram_core_rust_future_complete_f32(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_engram_core_rust_future_poll_f64(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_engram_core_rust_future_cancel_f64(uint64_t handle
);
void ffi_engram_core_rust_future_free_f64(uint64_t handle
);
double ffi_engram_core_rust_future_complete_f64(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_engram_core_rust_future_poll_pointer(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_engram_core_rust_future_cancel_pointer(uint64_t handle
);
void ffi_engram_core_rust_future_free_pointer(uint64_t handle
);
void*_Nonnull ffi_engram_core_rust_future_complete_pointer(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_engram_core_rust_future_poll_rust_buffer(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_engram_core_rust_future_cancel_rust_buffer(uint64_t handle
);
void ffi_engram_core_rust_future_free_rust_buffer(uint64_t handle
);
RustBuffer ffi_engram_core_rust_future_complete_rust_buffer(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_engram_core_rust_future_poll_void(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_engram_core_rust_future_cancel_void(uint64_t handle
);
void ffi_engram_core_rust_future_free_void(uint64_t handle
);
void ffi_engram_core_rust_future_complete_void(uint64_t handle, RustCallStatus *_Nonnull out_status
);
uint16_t uniffi_engram_core_checksum_func_decrypt_bytes(void
    
);
uint16_t uniffi_engram_core_checksum_func_derive_key(void
    
);
uint16_t uniffi_engram_core_checksum_func_encrypt_bytes(void
    
);
uint16_t uniffi_engram_core_checksum_func_generate_salt(void
    
);
uint16_t uniffi_engram_core_checksum_func_vault_list_markdown(void
    
);
uint16_t uniffi_engram_core_checksum_func_vault_read(void
    
);
uint16_t uniffi_engram_core_checksum_func_vault_write(void
    
);
uint16_t uniffi_engram_core_checksum_method_memorystorehandle_find_by_entity(void
    
);
uint16_t uniffi_engram_core_checksum_method_memorystorehandle_get_memory(void
    
);
uint16_t uniffi_engram_core_checksum_method_memorystorehandle_insert_memory(void
    
);
uint16_t uniffi_engram_core_checksum_method_memorystorehandle_record_count(void
    
);
uint16_t uniffi_engram_core_checksum_constructor_memorystorehandle_new(void
    
);
uint32_t ffi_engram_core_uniffi_contract_version(void
    
);