crates/engram-core/bindings/python/engram_core.py

_UniffiLib.ffi_engram_core_rust_future_poll_i32.restype = None
_UniffiLib.ffi_engram_core_rust_future_cancel_i32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_engram_core_rust_future_cancel_i32.restype = None
_UniffiLib.ffi_engram_core_rust_future_free_i32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_engram_core_rust_future_free_i32.restype = None
_UniffiLib.ffi_engram_core_rust_future_complete_i32.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_engram_core_rust_future_complete_i32.restype = ctypes.c_int32
_UniffiLib.ffi_engram_core_rust_future_poll_u64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_engram_core_rust_future_poll_u64.restype = None
_UniffiLib.ffi_engram_core_rust_future_cancel_u64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_engram_core_rust_future_cancel_u64.restype = None
_UniffiLib.ffi_engram_core_rust_future_free_u64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_engram_core_rust_future_free_u64.restype = None
_UniffiLib.ffi_engram_core_rust_future_complete_u64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_engram_core_rust_future_complete_u64.restype = ctypes.c_uint64
_UniffiLib.ffi_engram_core_rust_future_poll_i64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_engram_core_rust_future_poll_i64.restype = None
_UniffiLib.ffi_engram_core_rust_future_cancel_i64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_engram_core_rust_future_cancel_i64.restype = None
_UniffiLib.ffi_engram_core_rust_future_free_i64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_engram_core_rust_future_free_i64.restype = None
_UniffiLib.ffi_engram_core_rust_future_complete_i64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_engram_core_rust_future_complete_i64.restype = ctypes.c_int64
_UniffiLib.ffi_engram_core_rust_future_poll_f32.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_engram_core_rust_future_poll_f32.restype = None
_UniffiLib.ffi_engram_core_rust_future_cancel_f32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_engram_core_rust_future_cancel_f32.restype = None
_UniffiLib.ffi_engram_core_rust_future_free_f32.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_engram_core_rust_future_free_f32.restype = None
_UniffiLib.ffi_engram_core_rust_future_complete_f32.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_engram_core_rust_future_complete_f32.restype = ctypes.c_float
_UniffiLib.ffi_engram_core_rust_future_poll_f64.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_engram_core_rust_future_poll_f64.restype = None
_UniffiLib.ffi_engram_core_rust_future_cancel_f64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_engram_core_rust_future_cancel_f64.restype = None
_UniffiLib.ffi_engram_core_rust_future_free_f64.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_engram_core_rust_future_free_f64.restype = None
_UniffiLib.ffi_engram_core_rust_future_complete_f64.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_engram_core_rust_future_complete_f64.restype = ctypes.c_double
_UniffiLib.ffi_engram_core_rust_future_poll_pointer.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_engram_core_rust_future_poll_pointer.restype = None
_UniffiLib.ffi_engram_core_rust_future_cancel_pointer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_engram_core_rust_future_cancel_pointer.restype = None
_UniffiLib.ffi_engram_core_rust_future_free_pointer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_engram_core_rust_future_free_pointer.restype = None
_UniffiLib.ffi_engram_core_rust_future_complete_pointer.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_engram_core_rust_future_complete_pointer.restype = ctypes.c_void_p
_UniffiLib.ffi_engram_core_rust_future_poll_rust_buffer.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_engram_core_rust_future_poll_rust_buffer.restype = None
_UniffiLib.ffi_engram_core_rust_future_cancel_rust_buffer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_engram_core_rust_future_cancel_rust_buffer.restype = None
_UniffiLib.ffi_engram_core_rust_future_free_rust_buffer.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_engram_core_rust_future_free_rust_buffer.restype = None
_UniffiLib.ffi_engram_core_rust_future_complete_rust_buffer.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_engram_core_rust_future_complete_rust_buffer.restype = _UniffiRustBuffer
_UniffiLib.ffi_engram_core_rust_future_poll_void.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_engram_core_rust_future_poll_void.restype = None
_UniffiLib.ffi_engram_core_rust_future_cancel_void.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_engram_core_rust_future_cancel_void.restype = None
_UniffiLib.ffi_engram_core_rust_future_free_void.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_engram_core_rust_future_free_void.restype = None
_UniffiLib.ffi_engram_core_rust_future_complete_void.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_engram_core_rust_future_complete_void.restype = None
_UniffiLib.uniffi_engram_core_checksum_func_decrypt_bytes.argtypes = (
)
_UniffiLib.uniffi_engram_core_checksum_func_decrypt_bytes.restype = ctypes.c_uint16
_UniffiLib.uniffi_engram_core_checksum_func_derive_key.argtypes = (
)
_UniffiLib.uniffi_engram_core_checksum_func_derive_key.restype = ctypes.c_uint16
_UniffiLib.uniffi_engram_core_checksum_func_encrypt_bytes.argtypes = (
)
_UniffiLib.uniffi_engram_core_checksum_func_encrypt_bytes.restype = ctypes.c_uint16
_UniffiLib.uniffi_engram_core_checksum_func_generate_salt.argtypes = (
)
_UniffiLib.uniffi_engram_core_checksum_func_generate_salt.restype = ctypes.c_uint16
_UniffiLib.uniffi_engram_core_checksum_func_vault_list_markdown.argtypes = (
)
_UniffiLib.uniffi_engram_core_checksum_func_vault_list_markdown.restype = ctypes.c_uint16
_UniffiLib.uniffi_engram_core_checksum_func_vault_read.argtypes = (
)
_UniffiLib.uniffi_engram_core_checksum_func_vault_read.restype = ctypes.c_uint16
_UniffiLib.uniffi_engram_core_checksum_func_vault_write.argtypes = (
)
_UniffiLib.uniffi_engram_core_checksum_func_vault_write.restype = ctypes.c_uint16
_UniffiLib.uniffi_engram_core_checksum_method_memorystorehandle_find_by_entity.argtypes = (
)
_UniffiLib.uniffi_engram_core_checksum_method_memorystorehandle_find_by_entity.restype = ctypes.c_uint16
_UniffiLib.uniffi_engram_core_checksum_method_memorystorehandle_get_memory.argtypes = (
)
_UniffiLib.uniffi_engram_core_checksum_method_memorystorehandle_get_memory.restype = ctypes.c_uint16
_UniffiLib.uniffi_engram_core_checksum_method_memorystorehandle_insert_memory.argtypes = (
)
_UniffiLib.uniffi_engram_core_checksum_method_memorystorehandle_insert_memory.restype = ctypes.c_uint16
_UniffiLib.uniffi_engram_core_checksum_method_memorystorehandle_record_count.argtypes = (
)
_UniffiLib.uniffi_engram_core_checksum_method_memorystorehandle_record_count.restype = ctypes.c_uint16
_UniffiLib.uniffi_engram_core_checksum_constructor_memorystorehandle_new.argtypes = (
)
_UniffiLib.uniffi_engram_core_checksum_constructor_memorystorehandle_new.restype = ctypes.c_uint16
_UniffiLib.ffi_engram_core_uniffi_contract_version.argtypes = (
)
_UniffiLib.ffi_engram_core_uniffi_contract_version.restype = ctypes.c_uint32

_uniffi_check_contract_api_version(_UniffiLib)
# _uniffi_check_api_checksums(_UniffiLib)

# Public interface members begin here.


class _UniffiConverterUInt8(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "u8"
    VALUE_MIN = 0
    VALUE_MAX = 2**8

    @staticmethod
    def read(buf):
        return buf.read_u8()

    @staticmethod
    def write(value, buf):
        buf.write_u8(value)

class _UniffiConverterUInt64(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "u64"
    VALUE_MIN = 0
    VALUE_MAX = 2**64

    @staticmethod
    def read(buf):
        return buf.read_u64()

    @staticmethod
    def write(value, buf):
        buf.write_u64(value)

class _UniffiConverterInt64(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "i64"
    VALUE_MIN = -2**63
    VALUE_MAX = 2**63

    @staticmethod
    def read(buf):
        return buf.read_i64()

    @staticmethod
    def write(value, buf):
        buf.write_i64(value)

class _UniffiConverterString:
    @staticmethod
    def check_lower(value):
        if not isinstance(value, str):
            raise TypeError("argument must be str, not {}".format(type(value).__name__))
        return value

    @staticmethod
    def read(buf):
        size = buf.read_i32()
        if size < 0:
            raise InternalError("Unexpected negative string length")
        utf8_bytes = buf.read(size)
        return utf8_bytes.decode("utf-8")

    @staticmethod
    def write(value, buf):
        utf8_bytes = value.encode("utf-8")
        buf.write_i32(len(utf8_bytes))
        buf.write(utf8_bytes)

    @staticmethod
    def lift(buf):
        with buf.consume_with_stream() as stream:
            return stream.read(stream.remaining()).decode("utf-8")

    @staticmethod
    def lower(value):
        with _UniffiRustBuffer.alloc_with_builder() as builder:
            builder.write(value.encode("utf-8"))
            return builder.finalize()



class MemoryStoreHandleProtocol(typing.Protocol):
    def find_by_entity(self, entity: "str"):
        raise NotImplementedError
    def get_memory(self, id: "str"):
        raise NotImplementedError
    def insert_memory(self, entity: "str",attribute: "str",value: "str",source: "typing.Optional[str]"):
        raise NotImplementedError
    def record_count(self, ):
        raise NotImplementedError


class MemoryStoreHandle:
    _pointer: ctypes.c_void_p
    def __init__(self, db_path: "str",key_bytes: "typing.List[int]"):
        _UniffiConverterString.check_lower(db_path)
        
        _UniffiConverterSequenceUInt8.check_lower(key_bytes)
        
        self._pointer = _uniffi_rust_call_with_error(_UniffiConverterTypeEngramError,_UniffiLib.uniffi_engram_core_fn_constructor_memorystorehandle_new,
        _UniffiConverterString.lower(db_path),
        _UniffiConverterSequenceUInt8.lower(key_bytes))

    def __del__(self):
        # In case of partial initialization of instances.
        pointer = getattr(self, "_pointer", None)
        if pointer is not None:
            _uniffi_rust_call(_UniffiLib.uniffi_engram_core_fn_free_memorystorehandle, pointer)

    def _uniffi_clone_pointer(self):
        return _uniffi_rust_call(_UniffiLib.uniffi_engram_core_fn_clone_memorystorehandle, self._pointer)

    # Used by alternative constructors or any methods which return this type.
    @classmethod
    def _make_instance_(cls, pointer):
        # Lightly yucky way to bypass the usual __init__ logic
        # and just create a new instance with the required pointer.
        inst = cls.__new__(cls)
        inst._pointer = pointer
        return inst


    def find_by_entity(self, entity: "str") -> "typing.List[MemoryRecord]":
        _UniffiConverterString.check_lower(entity)
        
        return _UniffiConverterSequenceTypeMemoryRecord.lift(
            _uniffi_rust_call_with_error(_UniffiConverterTypeEngramError,_UniffiLib.uniffi_engram_core_fn_method_memorystorehandle_find_by_entity,self._uniffi_clone_pointer(),
        _UniffiConverterString.lower(entity))
        )




